--- a/foodOrderWebApp/src/main/resources/application.properties
+++ b/foodOrderWebApp/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/foodorder?createDatabaseIfNo
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Password
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -17,5 +17,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.jpa.open-in-view=true
 spring.cache.type=none
+
+maven.basedir=@project.basedir@
+app.upload.dir=${maven.basedir}/src/main/webapp
 
 
