--- a/foodOrderWebApp/src/main/resources/application.properties
+++ b/foodOrderWebApp/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 security.basic.enabled=false
-management.security.enabled=false
 
 logging.pattern.console= %date  %highlight(%-5level) [%12.12thread] %cyan(%-40.40logger{40}) : %msg %n
 
@@ -7,23 +6,12 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/foodorder?createDatabaseIfNo
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Password
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.open-in-view=true
 spring.cache.type=none
-
-maven.basedir=@project.basedir@
-#app.upload.dir=${maven.basedir}/src/main/webapp
-app.upload.dir=${maven.basedir}/src/main/resources/static/fileupload
-
-
-spring.queries.users-query=select username, password from user where username=?
-spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.username=?
-
